--- a/script_L2_noun.ipynb
+++ b/script_L2_noun.ipynb
@@ -28,6 +28,7 @@
     "'''\n",
     "pour l'environnemnet Java requis par le POS-tagger\n",
     "'''\n",
+    "#Enfin, nous y sommes ! \n",
     "os.environ['JAVA_HOME'] = \"C:\\\\Program Files\\\\Java\\\\jre1.8.0_171\\\\bin\"\n",
     "_path_to_jar = \"C:\\\\Users\\\\antoi\\\\Documents\\\\UDEM\\\\Article2\\\\ID_L2\\\\stanford-corenlp-full-2018-02-27\\\\stanford-postagger-full-2018-02-27\\\\stanford-postagger.jar\"\n",
     "_path_to_model = \"C:\\\\Users\\\\antoi\\\\Documents\\\\UDEM\\Article2\\\\ID_L2\\\\stanford-corenlp-full-2018-02-27\\\\stanford-postagger-full-2018-02-27\\\\models\\\\french.tagger\"\n",
